# Chess

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/Components/Board/: Board.css  Board.tsx
client/src/Components/Cell/: Cell.css  Cell.tsx
client/src/Components/GameOver/: GameOver.css  GameOver.tsx
client/src/Components/Screens/BoardScreen/: BoardScreen.tsx
client/src/Components/Screens/OpeningScreen/: OpeningScreen.tsx
client/src/Components/Status/: Status.css  Status.tsx
client/src/Logic/: Chess.tsx  chess.tsx
client/src/Types/: Types.tsx
client/src/enums/: Colors.ts  PieceNames.ts
server/: Cargo.toml
server/src/: chess.rs  main.rs
server/src/chess/: chess.rs
server_java/: Chess.java  Server.java
server_java/src/: Chess.java  Server.java  pom.xml
